<resources>
    <string name="app_name">StudyWithMe</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="university">University</string>
    <string name="department">Department</string>
    <string name="dashboard">Dashboard</string>
    <string name="subject">Subject</string>
    <string name="reason">Reason</string>
    <string name="dd_mm_yyyy_hh_mm">dd/mm/yyyy hh:mm</string>
    <string name="log_in">Hello pal!</string>
    <string name="not_a_member_sign_up_now">Not a member? Sign up now</string>
    <string name="login">Login</string>
    <string name="plus">+</string>
    <string name="create_new_study_request">Create new Study Request</string>
    <string name="add_request">Add Request</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="store">Store</string>
    <string name="select_period">Select Period</string>
    <string name="new_study_request">New Study Request</string>
    <string name="place">Place</string>
    <string name="comments">Comments</string>
    <string name="max_matches">Max Matches</string>
    <string name="period_of_study">Period of study</string>
    <string name="create">Create</string>
    <string name="times_for_study">Times for study</string>
    <string name="maxmatches">MaxMatches</string>
    <string name="details">Details</string>
    <string name="matches">Matches</string>
    <string name="times_to_study">Times to study</string>
    <string name="your_study_partner">Your study partner</string>
    <string name="your_study_request">Your study request</string>
    <string name="about_studywithme">About StudyWithMe</string>
    <string name="concept">An Android application for college/university students seeking study company/group for specific courses, specific period, and specific reasons.\n\nOnce a user submits a “study request” StudyWithMe matches people with similar requests and brings them in contact in order to arrange their study session. \n\nIt also keeps track of the user’s previous and scheduled study sessions, alongside its details.</string>
    <string name="authors">Authors</string>
    <string name="authorsFull">Anthopoulos E., Balaktsis C., Maredis I.</string>
    <string name="version">Version</string>
    <string name="versionDetailsFull">V.1.0 - Beta\n\nThis is a prototype version (proof of concept) of StudyWithMe.\nThe original application will use a remote-server authentication and DBMS.</string>
    <string name="logo_of_studywithme">Logo of StudyWithMe</string>
    <string name="auth">Aristotle University of Thessaloniki</string>
    <string name="ihu">International Hellenic University</string>
    <string name="uom">University of Macedonia</string>
    <string name="test">Test</string>
    <string name="project">Project</string>
    <string name="exam">Exam</string>
    <string name="regular">Regular</string>
    <string name="log_out">Log out</string>
    <string name="try_creating_a_study_request_by_tapping_on">Try creating a Study Request by tapping on (+)</string>
    <string name="try_creating_a_new_study_request_by_tapping_on">Try creating a new study request by tapping on (+) !</string>
</resources>