<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add_request"
        android:icon="@drawable/ic_add_request"
        android:title="@string/add_request"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out"
        app:showAsAction="ifRoom" />
</menu>
